# skillsbyrubix

./: .gitignore  README.md  pyproject.toml
demo/: app.py  mcp_client.py  requirements.txt
demo/static/: app.js  style.css
demo/templates/: index.html
skill/ayurvedic-wellness/: SKILL.md
src/ayurveda_wellness_mcp/: constants.py  loader.py  logic.py  server.py  triage.py
src/ayurveda_wellness_mcp/data/: pranayama.json  recipes.json  remedies.json  routines.json  safety.json  symptom_synonyms.json
tests/: test_ayurveda_wellness_mcp.py
